--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
-h1{
-    font-family: 'Caveat', cursive;
-    background-color: black;
-    color: white;
-    text-align: center;
+h1{  
+    font-size: 3rem;
     text-transform: uppercase;
 }
-img{
+.gift{
     border: 5px solid white;
     width: 100%;
 }
-p{
-    background-color: black;
-    color: white;s
-    text-align: center;
-    
-}
-div{
+
+.poster{
+    font-family: "Libre Baskerville", serif;
     width: 50%;
-    margin-left: 25%;
+    margin-left: 25%;  
+    color: white;
+    text-align: center;
+    margin-top: 100px;
 }
-html{
+body{
     background-color: black;
 }
